--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -16,10 +16,10 @@
       </h1>
       <div class="avatar-btn dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="false">
         <%# <i class="fas fa-bars"></i> %>
-        <% if current_user.photo.key %>
+            <% if current_user.photo.key %>
               <%= cl_image_tag current_user.photo.key, class: "avatar" %>
             <% else %>
-              <%= image_tag 'avatar-default.jpg', class: "avatar" %>
+              <%= image_tag 'avatar-default', class: "avatar" %>
             <% end %>
       </div>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
@@ -47,7 +47,13 @@
         <% @dashboard.each do |alummni| %>
           <tbody>
             <tr>
-              <td scope="row"><%#<%= cl_image_tag(alummni.photo.key, class: "avatar", default: "") %></td>
+              <td scope="row">
+                <% if current_user.photo.key %>
+                  <%= cl_image_tag(alummni.photo.key, class: "avatar", default: "") %>
+                <% else %>
+                  <%= image_tag 'avatar-default', class: "avatar" %>
+                <% end %>
+              </td>
               <td><%= alummni.first_name %></td>
               <td><%= alummni.last_name %></td>
               <td><%= alummni.email %></td>
