--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -40,6 +40,7 @@
   margin: 35px auto;
   padding: 30px 50px;
   margin-top: 0%;
+  box-shadow: 0 0 10px rgb(107, 105, 105);
   h2 {
     font-weight: bold;
     font-size: 24px;
@@ -108,7 +109,7 @@ input {
 .background-perfil-2 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-  height: 350px;
+  height: 37vh;
   background-position: 38%;
   background-size: cover;
 }
