--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -62,6 +62,7 @@ a {
     width: 100%;
   }
   .content-side {
+    margin-top: 88px;
     width: 35%;
     display: flex;
     flex-direction: column;
@@ -89,7 +90,6 @@ a {
     }
     .box-interview{
       padding: 20px;
-      flex-grow: 1;
     }
   }
 }
