avatar teacher y detalles de titulo

--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -12,7 +12,7 @@
       <div class="card-text-recurso">
         <div class="d-flex  justify-content-between">
           <p>Martes 18 Mayo, 2021</p>
-          <p>Autor: Mariamer henriquez</p>
+          <p>Autor: Mariamer Henriquez</p>
         </div>
         <h5>¿Por dónde empezar?</h5>
         <p class="text-justify">¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.</p>
