--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -48,7 +48,7 @@
           <tbody>
             <tr>
               <td scope="row">
-                <% if current_user.photo.key %>
+                <% if alummni.photo.key %>
                   <%= cl_image_tag(alummni.photo.key, class: "avatar", default: "") %>
                 <% else %>
                   <%= image_tag 'avatar-default', class: "avatar" %>
