error de assets

--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -360,7 +360,7 @@
                                 <% if current_user.photo.key %>
                                   <%= cl_image_tag current_user.photo.key %>
                                 <% else %>
-                                  <%= image_tag 'avatar-default' %>
+                                  <%= image_tag 'avatar-default.jpg' %>
                                 <% end %>
                                 <span class="message-data-time">10:15 AM, Hoy</span>
                             </div>
