--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -339,7 +339,7 @@
                                 <% if User.find(1).photo.key %>
                                   <%= cl_image_tag User.find(1).photo.key %>
                                 <% else %>
-                                  <%= image_tag 'avatar-default' %>
+                                  <%= image_tag 'avatar-default.jpg' %>
                                 <% end %>
                             </div>
                             <div class="message other-message float-right"> Hola Mel, ¿cómo estás? ¿Cómo va tu avance? </div>
@@ -349,7 +349,7 @@
                                 <% if current_user.photo.key %>
                                   <%= cl_image_tag current_user.photo.key %>
                                 <% else %>
-                                  <%= image_tag 'avatar-default' %>
+                                  <%= image_tag 'avatar-default.jpg' %>
                                 <% end %>
                                 <span class="message-data-time">10:12 AM, Hoy</span>
                             </div>
