.jpg nuestros cursos

--- a/app/views/pages/cursos.html.erb
+++ b/app/views/pages/cursos.html.erb
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="card-cursos-2 d-flex m-4 p-0">
-      <%= image_tag "analisis_estadistico_1", class:"img-cursos"%>
+      <%= image_tag "analisis_estadistico_1.jpg", class:"img-cursos"%>
       <div class="card-curso">
         <h5>Estadística para tesis</h5>
         <p>Te brindamos las herramientas estadísitcas para procesar los resultados de tu tesis</p>
